SERVER-6178 catch dbexceptions not socket exceptions during startup consistency check

blah